@@ -244,6 +244,7 @@ Version 1.11.0-svn:
    * Fixed: Binding a temporary in the network code, possibly causing
      crashing.
    * Fixed bug #19658: In replays, units sometimes refresh movement when it is not their turn
+   * Added: Enabled BREAKPOINT and WES_HALT macros on the Pandora.
 
 Version 1.10.0:
  * Campaigns:
